# next-step

./: .gitignore  Dockerfile  README.md  docker-compose.yml
dapp/set-in-stone/: Dockerfile  package-lock.json  package.json
dapp/set-in-stone/bundler/: webpack.common.js
dapp/set-in-stone/src/: bpm.js  data.ts  index.html  script.js
examples/bpmn/: parmigiano.bpmn  simple.bpmn
examples/connectors/evm/: NextStepInterface.sol
examples/contract-erc20/: create-erc20.ts  package-lock.json  package.json
examples/contract-erc20/truffle/: package-lock.json  package.json
examples/contract-hello/: package-lock.json
examples/demo/: CriticalLevel.sol  HelloNextStep.sol  INextStep.sol  demo_setup.sh  parmigiano.bpmn  support.bpmn
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/next-step/: Cargo.toml
pallets/next-step/connectors/evm/: Cargo.toml  INextStep.sol
pallets/next-step/connectors/evm/src/: lib.rs
pallets/next-step/src/: access.rs  benchmarking.rs  bpm.rs  bpmn.rs  bpx.rs  dev.rs  lib.rs  mock.rs  sax.rs  storage.rs  tests.rs  types.rs  utils.rs
pallets/next-step/test/next-step/examples/: parmigiano.bpmn  parmigiano_old.bpmn
pallets/next-step/test/next-step/examples/simple/: cross.bpmn  cross.json  simple.json
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
