[package]
name = "pallet-next-step"
version = "0.2.0"
authors = ["Mustafa Elnaquib <melnaquib@gmail.com>"]
homepage = "https://readyvu.com/"
edition = "2021"
license = "AGPLv3"
publish = false
repository = "https://github.com/melnaquib/next-step/"
description = "FRAME pallet for BPMN 2.0 Business Process Model and Notation execution on polkadot blockchain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive",] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = 'master' }
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = 'master' }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", optional = true, branch = 'master' }

sp-std = { default-features = false, version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'master' }
sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'master' }
sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'master'}

sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'master' }

pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

reader_for_microxml = { version = "2.0.1", default-features = false }

bimap = { version = "0.6.2", default-features = false }
hex-literal = { version = "0.3.4"}
unborrow = {version = "0.3.1"}

[dev-dependencies]
sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'master' }
sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'master' }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
    'sp-std/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
	"pallet-timestamp/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
